@@ -1,3 +1,9 @@
+2015-08-10  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-268
+
+	* src/workspace.cc: Update docs for verbosity WSM.
+
 2015-07-03  Richard Larsson  <ric.larsson@gmail.com>
 
 	* arts-2-3-267
